wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_uncategorized_field.stderr
error: Enum variant is missing `category` attribute
 --> tests/derive_error_category/fail_on_uncategorized_field.rs:3:5
  |
3 |     MyError,
  |     ^^^^^^^
